[project]
name = "infrastructure"
version = "0.1.0"
description = "Infrastructure to support frontend and backend"

readme = "README.md"
requires-python = ">=3.13.2"

dependencies = [
    # Specific to this project

    # Managed by upstream template
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
    "pulumi>=3.208.0",
    "pulumi-aws>=7.12.0",
    "pulumi-aws-native>=1.38.0",
    "pulumi-command>=1.1.3",
    "ephemeral-pulumi-deploy>=0.0.5",
    "lab-auto-pulumi>=0.1.17",
    "boto3>=1.41.2",
    "boto3-stubs[all]>=1.41.2",
]

[tool.uv]
package = true
